client/resources/styles/main.css
/*
* @Author: aaronpmishkin
* @Date:   2016-05-04 12:24:53
* @Last Modified by:   Emily Hindalong
* @Last Modified time: 2016-08-10 16:15:34
*/

/* Global Styles */


.flex-column {
    position: relative;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.flex-row {
    position: relative;
    display: flex;
    justify-content: center;
    flex-direction: row;
}

/* Registration Page Styles */

.welcome-header {
	height: 10rem;
	top: 2rem;
}

.name-form-group {
	top: 20rem;
}

.registration-background {
	opacity: .3;
    overflow: hidden !important;
    z-index: -10;
    margin-bottom: -110rem;
}

#register-button {
	position: relative;
}

.navbar-group {
    margin-bottom: 0px !important;
}

.center-form {
    padding: 8px !important;
}

/* Creation Page Styles */

a.upload {
    display: block;
}

#my-valuecharts-button {
    margin-left: 10px;
}

.file-upload {
    position: relative;
    overflow: hidden;
    margin: 10px;
}
.file-upload input.upload {
    position: absolute;
    top: -13px;
    height: 45px;
    right: 0;
    margin: 0;
    padding: 0;
    font-size: 11px;
    cursor: pointer;
    opacity: 0;
    filter: alpha(opacity=0);
}

.column-container {
    justify-content: space-around !important;
}

.column {

}

.creation-page {
	top: 8rem;
}

.vertical-divider {
    border-left:1px solid #909090; 
    border-right:1px solid #a2a2a2; 
    height: 200%;
    position: relative;
    top: 5rem;
}

.demo-table {
    top: 15rem;
}

.my-valuecharts-header {
    top: 10rem;
    position: relative;
}

.my-account-header {
    top: 10rem;
    position: relative;
    height: 18rem;
}

/* Score Function Viewer Styles */

.score-function-viewer {
    top: 10rem !important;
}

.score-function-title {
    position: relative;
    top: 5rem;
}

.dashed-line {
    stroke-dasharray: 3,3;
    stroke: black;
    stroke-width: 1px;
}

/* SVG */

.svg-content-valuechart {
    position: absolute;
    height: 75%;
    width: 95%;
    top: 14rem;
    left: 5%;
}

.svg-content-createvaluechart {
    position: relative;
    height: 30%;
    width: 30%;
    top: 1rem;
    left: 1%;
}

/* ValueChart Viewer Styles */

.valuechart-toolbar {
    z-index: 11;
    position: relative;
    top: 3.5rem;
}

.best-score-label {
    font-weight: bold;
    fill: red;
}

.utility-axis {
    fill: none;
    stroke-width: 1.5px;
    stroke: #000;
}

.detail-box {
    position: absolute !important;
    top: 8rem;
    z-index: 10;
}

.detail-box-vertical {
    left: 5% !important;
}

.detail-box-horizontal {
}

#alternative-detail-box {
    overflow-y: scroll;
}

.detail-toolbar {
    left: 2px;
    position: relative;
}

.detail-box-tab {
    outline: none !important;
}

#alternative-header-container {
    position: relative;
    top: 5rem;
    z-index: -10;
}

#user-list-header-container {
    position: relative;
    top: 5rem;
    z-index: -10;
}

.toolbar-row {
    bottom: 3rem;
}

.alternative-link:hover {
    fill: #23527c !important;
    text-decoration: underline;
}

.users-list {
    top: 16rem;
}

/* ValueChart SVG Styles */

.valuechart-outline {
    fill: white;
    stroke: grey;
    stroke-width: 1;   
}

.alternative-box {
    fill: rgba(255, 255, 255, 0);
    stroke: grey;
    stroke-width: 2;  
}

.valuechart-label-text {
    font-size: 18px;
    fill: black;
}

.valuechart-label-outline {
    stroke-width: 3;
}

.valuechart-label-divider {
    opacity: 0;
    stroke: black;
    stroke-width: 12;
} 

.scorefunction-fitline {
    stroke: black;
    stroke-width: 1;
}

.scorefunction-bar {
    fill: white;
    stroke-width: 1;
}

.objective-weight-outline {
    fill: transparent;
    stroke: red;
    stroke-width: 3px;
}

/* Override bootstrap default styles*/

input[type=color] {
    background: none;
    border: 0px;
}

body {
	/*overflow: hidden;*/
}

input {
	border-radius: 3px !important;
}

.btn {
    margin: 5px 5px !important;
}	

.btn-success {
	background-color: #2A692A !important;
	border-color: #2A692A !important;
}

.valuechart-toolbar-group {
	margin-bottom: 4rem !important;
}

.form-control {
	border: 2px solid #999  !important;
}

.row {
    margin-bottom: 1rem;
}

/* Multi-level dropdowns */

.dropdown-submenu {
    position:relative;
}

.dropdown-submenu>.dropdown-menu {
    top:0;
    left:100%;
    margin-top:-6px;
    margin-left:-1px;
    -webkit-border-radius:0 6px 6px 6px;
    -moz-border-radius:0 6px 6px 6px;
    border-radius:0 6px 6px 6px;
}

.dropdown-submenu:hover>.dropdown-menu {
    display:block;
}

.dropdown-submenu>a:after {
    display:block;
    content:" ";
    float:right;
    width:0;
    height:0;
    border-color:transparent;
    border-style:solid;
    border-width:5px 0 5px 5px;
    border-left-color:#cccccc;
    margin-top:5px;
    margin-right:-10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color:#ffffff;
}

.dropdown-submenu.pull-left {
    float:none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left:-100%;
    margin-left:10px;
    -webkit-border-radius:6px 0 6px 6px;
    -moz-border-radius:6px 0 6px 6px;
    border-radius:6px 0 6px 6px;
}

/* Creation workflow styles */

.objectives-table-row {
    display: table-row;
}

.objectives-table-cell {
    display: table-cell;
    width: 60px;
    padding-right: 5px;
}

.objectives-table-input {
    width: 200px !important;
}

.tablerowselected {
    background-color: #D4E7F2;
}

#add-category-input {
    width: 200px !important; 
    margin: 5px !important;
}

#score-function-dropdown {
    width: 245px; 
    margin-right: 5px;
}

.worst-outcome {
    background-color: #ffcccc;
}

.best-outcome {
    background-color: #ccffcc;
}

